# flame-code

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  DESIGN.md  FLAME.md  PLAN.md  README.md  WORKFLOW.md  arenaai-prosedur.md  index.html  mock-up FlameV2.html  opencode.json  package.json  pnpm-lock.yaml  settings.html  tsconfig.app.tsbuildinfo  vite.config.ts
.github/workflows/: ci.yml
.lsmcp/cache/: symbols.db
.opencode.bak/agents/: ai-engineer.md  architect.md  design-system-engineer.md  frontend-dev.md  qa-tester.md  rust-dev.md  security-auditor.md  ui-designer.md  visual-critic.md
.opencode.bak/skills/flame-design-tokens/: SKILL.md
.opencode.bak/skills/ui-first-workflow/: SKILL.md
.opencode.bak/skills/v2-migration-guide/: SKILL.md
.opencode.bak/skills/v2-mockup-design/: SKILL.md
.opencode/instructions/: shell-strategy.md
prosedur/: sample-search-prosedur.md
scripts/: screenshot.mjs
src/: vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/mcp/cargo-audit/: Cargo.toml
src-tauri/mcp/cargo-audit/src/: main.rs
src-tauri/mcp/release/: Cargo.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: agent.rs
src/app/: App.tsx
src/components/ai-elements/: tool.tsx
src/modules/ai/: config.ts
src/modules/editor/: EditorPane.tsx
src/modules/settings/: preferences.ts  store.ts
src/modules/theme/: SurfaceLayer.tsx  ThemeProvider.tsx  bgImageStore.ts  customThemes.ts  themeFiles.ts  types.ts
src/settings/: SettingsApp.tsx
src/styles/: globals.css
src/test/: setup.ts
(+24 files in other folders)
