[package]
name = "mcp-cargo-audit"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp-cargo-audit"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.7.0", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
